--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -128,7 +128,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13" ]
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13' ]
     steps:
     - name: Checkout Beanie
       uses: actions/checkout@v4
