--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,8 +91,7 @@ docs = [
     'pyupgrade',
     'mike',
     'pydantic-settings',
-    # remove once docs issue is fixed in pydantic-extra-types
-    'pydantic-extra-types==2.10',
+    'pydantic-extra-types @ git+https://github.com/pydantic/pydantic-extra-types.git@main',
     'requests',
 ]
 linting = [
