--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ validation:
   omitted_files: warn
   absolute_links: warn
   unrecognized_links: warn
+  anchors: warn
 
 extra_css:
   - 'extra/terminal.css'
